# ricky-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  README_en.md  build.bat  build.sh  run_example.bat  run_example.sh  run_test.bat  run_tests.bat  run_tests.sh
doc/: C++机器学习库详细设计文档.md  Stream.md  代码优化备忘录.txt  协程实现类似java的Stream.md  迭代.md
example/: CMakeLists.txt  hello_world.cpp  http_server.cpp
examples/: CMakeLists.txt  README.md  classification_mlp.cpp  gen_classification_data.py  gen_regression_data.py  hello_world.cpp  http_server.cpp  mem_leak_detection.cpp  regression_mlp.cpp  tcp_client.cpp  tcp_server.cpp  test_log.cpp  test_matrix.cpp  trace_alloc.cpp
include/: Allocator.hpp  CMakeLists.txt  CString.h  CString.hpp  Encoding.hpp  Exception.hpp  Function.hpp  NoCopy.hpp  Object.hpp  Pair.hpp  String.hpp  banner.hpp  color.hpp  cstring.hpp  hash.hpp  marker.hpp  match.hpp  my_concepts.hpp  my_config.hpp  my_exception.hpp  my_format.hpp  my_func.hpp  my_hash.hpp  my_pair.hpp  my_traits.hpp  my_types.hpp  object.hpp  option.hpp  raise_error.hpp  result.hpp  ricky.hpp  ricky_api.hpp  ricky_concepts.hpp  ricky_format.hpp  ricky_lib.hpp  ricky_memory.hpp  ricky_traits.hpp  sys.hpp  traits.hpp
include/ai/: NdArray.hpp  device.hpp  tensor.hpp
include/async/: Mutex.hpp  Thread.hpp  ThreadPool.hpp  thread_pool.hpp
include/coro/: Generator.hpp  Promise.hpp  co_utils.hpp  generator.hpp  promise.hpp
include/fake/: fake.hpp
include/fs/: file.hpp  filesystem.hpp  path_buf.hpp
include/graph/: Graph.hpp  graph.hpp  graph_algorithm.hpp  graph_helper.hpp
include/io/: Color.hpp  Json.hpp  JsonParser.hpp  JsonSerializer.hpp  Log.hpp  Serializer.hpp  json.hpp  json_parser.hpp  json_serializer.hpp  json_trait.hpp  printer.hpp  raise_error.hpp  serializer.hpp
include/json/: Json.hpp  JsonParser.hpp  json.hpp  json_parser.hpp  json_serializer.hpp  json_trait.hpp  serializer.hpp
include/log/: Log.hpp  Log2.hpp  log.hpp
include/math/: BigDecimal.hpp  BigDecimal.md  BigInteger.hpp  Complex.hpp  Expr.hpp  Line.hpp  (+18 more)
src/: banner.cpp  main.cpp
tests/: CMakeLists.txt  test_allocator.hpp  test_array.hpp  test_bi_chain.hpp  test_big_decimal.hpp  test_big_integer.hpp  test_binary_heap.hpp  test_binary_utils.hpp  test_buffer.hpp  test_chain.hpp  test_code_point.hpp  test_complex.hpp  test_creator_and_deleter.hpp  test_cstring.hpp  test_date.hpp  test_date_time.hpp  test_dict.hpp  test_disjoint_set.hpp  test_dist.hpp  test_duration.hpp  test_dynarray.hpp  test_expr.hpp  test_expression.hpp  test_generator.hpp  test_geometry_2d.hpp  test_graph.hpp  test_graph_algorithm.hpp  test_hash_map.hpp  test_http.hpp  test_huffman_tree.hpp  test_json_parser.hpp  test_json_serializer.hpp  test_linked_list.hpp  test_log.hpp  test_main.cpp  test_match.hpp  test_math_utils.hpp  test_matrix.hpp  test_num_base.hpp  test_option_and_result.hpp  (+25 more)
tests/bench/: bench_code_point.cpp  bench_code_point.hpp  bench_dynarray.cpp  bench_hash_map.cpp  bench_queue.cpp  bench_rbtree_map.cpp  bench_rbtree_map.hpp  bench_str_find.cpp  bench_string_builder.cpp  bench_thread_pool.cpp  bench_thread_pool.hpp  bench_vec.cpp  test_speed.cpp  test_speed.hpp
tests/bench/async/: bench_thread_pool.cpp
tests/bench/str/: bench_str_find.hpp
tests/bench/util/: bench_dynarray.cpp  bench_dynarray.hpp  bench_hash_map.cpp  bench_hash_map.hpp  bench_queue.cpp  bench_queue.hpp  bench_rbtree_map.cpp  bench_string_builder.cpp  bench_string_builder.hpp  bench_vec.cpp  bench_vec.hpp
tests/resources/: README.md  code.txt  test_http_server.bat  text.txt
tests/unit/: test_allocator.cpp  test_allocator.hpp  test_array.cpp  test_array.hpp  test_big_decimal.cpp  test_big_decimal.hpp  test_big_integer.cpp  test_big_integer.hpp  test_binary_heap.cpp  test_binary_heap.hpp  test_binary_utils.cpp  test_binary_utils.hpp  test_buffer.cpp  test_buffer.hpp  test_code_point.cpp  test_code_point.hpp  test_complex.cpp  test_complex.hpp  test_cstring.cpp  test_cstring.hpp  test_date.cpp  test_date.hpp  test_date_time.cpp  test_date_time.hpp  test_disjoint_set.cpp  test_disjoint_set.hpp  test_duration.cpp  test_duration.hpp  test_dynarray.cpp  test_dynarray.hpp  test_expr.cpp  test_expr.hpp  test_file.cpp  test_file.hpp  test_generator.cpp  test_generator.hpp  test_geometry_2d.cpp  test_geometry_2d.hpp  test_graph.cpp  test_graph.hpp  (+65 more)
tests/unit/async/: test_thread_pool.cpp
tests/unit/fs/: test_file.cpp  test_path_buf.cpp  test_path_buf.hpp
tests/unit/graph/: test_graph.cpp  test_graph_algorithm.cpp  test_graph_algorithm.hpp
tests/unit/json/: test_json_parser.cpp  test_json_serializer.cpp  test_json_serializer.hpp
tests/unit/math/: test_big_decimal.cpp  test_big_integer.cpp  test_complex.cpp  test_expr.cpp  test_expr.hpp  test_geometry_2d.cpp  test_geometry_2d.hpp  test_math_utils.hpp  test_matrix.cpp  test_matrix.hpp  test_num_base.cpp
tests/unit/mem/: test_allocator.hpp
tests/unit/net/: test_ip_addr.cpp  test_ip_addr.hpp  test_tcp.cpp  test_tcp.hpp  test_udp.cpp  test_udp.hpp
tests/unit/nn/: test_activations.cpp  test_activations.hpp  test_autograd.cpp  test_autograd.hpp  test_linear.cpp  test_linear.hpp  test_loss.cpp  test_loss.hpp  test_tensor.cpp  test_tensor.hpp
tests/unit/plat/: test_plat_fs.cpp  test_plat_fs.hpp
tests/unit/str/: test_str_string.hpp
tests/unit/test/: test_test_utils.cpp
tests/unit/util/: test_array.cpp  test_binary_heap.cpp  test_binary_heap.hpp  test_binary_utils.cpp  test_binary_utils.hpp  test_buffer.hpp  test_code_point.cpp  test_date.cpp  test_date.hpp  test_date_time.cpp  test_disjoint_set.cpp  test_disjoint_set.hpp  test_duration.cpp  test_duration.hpp  test_dynarray.cpp  test_dynarray.hpp  test_generator.cpp  test_generator.hpp  test_hash_map.cpp  test_huffman_tree.cpp  test_linked_list.cpp  test_linked_list.hpp  test_queue.cpp  test_random.cpp  test_random.hpp  test_rbtree_map.cpp  test_stack.cpp  test_stream.cpp  test_string.cpp  test_string_algorithm.cpp  test_string_algorithm.hpp  test_string_builder.cpp  test_time.cpp  test_time.hpp  test_tree.cpp  test_vec.cpp  test_vec.hpp
(+152 files in other folders)
